--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@ main{
     padding: 2rem;
     overflow: auto;
 
-    & .messages{
+    & #messages{
         list-style: none;
         display: flex;
         flex-direction: column;
@@ -89,26 +89,29 @@ main{
 footer{
     padding: 2rem;
     border-top: 2px solid #f0f0f0;
-    display: flex;
-    gap: 1rem;
 
-    & input{
-        width: 100%;
-        padding: 1rem;
-        border: none;
-        outline: none;
-        font-size: 1.5rem;
-        color: #7b7b7b;
-    }
-
-    & button{
-        border-radius: 50%;
-        width: 4rem;
-        height: 4rem;
+    & form{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 2.5rem;
-        border: none;
+        gap: 1rem;
+
+        & input{
+            width: 100%;
+            padding: 1rem;
+            border: none;
+            outline: none;
+            font-size: 1.5rem;
+            color: #7b7b7b;
+        }
+
+        & button{
+            border-radius: 50%;
+            width: 4rem;
+            height: 4rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.5rem;
+            border: none;
+        }
     }
 }
